--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">CNN Student News</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_play">Video &amp; Scripts</string>
+    <string name="title_activity_play">Video &amp; Script</string>
 
 </resources>
