--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="title_activity_play">Video &amp; Script</string>
     <string name="action_info">Information</string>
     <string name="action_qa">Q &amp; A</string>
+    <string name="action_notelist">Quick Note</string>
+    <string name="title_activity_note_list">Quick Note List</string>
+    <string name="title_activity_note">Note Content</string>
 
 </resources>
