--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_info">Information</string>
     <string name="action_qa">Q &amp; A</string>
     <string name="action_notelist">Quick Note List</string>
-    <string name="action_note">Note</string>
+    <string name="action_note">Quick Note</string>
     <string name="action_rough_position">Rough Position</string>
     <string name="action_rotate_screen">Rotate Screen</string>
     <string name="title_activity_note_list">Quick Note List</string>
